AI-JADEDEVS4/src/objects/Area__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Determines if a Zipcode is actively associated with a territory.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AreaCode__c</fullName>
        <label>Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarrierRouteRateSortation__c</fullName>
        <label>CarrierRouteRateSortation</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityAliasCode__c</fullName>
        <label>CityAliasCode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityAliasMixedCase__c</fullName>
        <label>CityAliasMixedCase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityAliasName__c</fullName>
        <label>City Alias Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityDeliveryIndicator__c</fullName>
        <label>CityDeliveryIndicator</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CityMixedCase__c</fullName>
        <label>CityMixedCase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityStateKey__c</fullName>
        <label>CityStateKey</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityType__c</fullName>
        <label>City Type</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassificationCode__c</fullName>
        <label>ClassificationCode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>2 character ISO Code. Actual name country is defined on the record &quot;Name&quot; field.</description>
        <inlineHelpText>2 character ISO Code. Actual name country is defined on the record &quot;Name&quot; field.</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountyANSI__c</fullName>
        <label>CountyANSI</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountyFIPS__c</fullName>
        <label>CountyFIPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DayLightSaving__c</fullName>
        <label>Daylight Saving</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Elevation__c</fullName>
        <label>Elevation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FacilityCode__c</fullName>
        <label>FacilityCode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinanceNumber__c</fullName>
        <label>FinanceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique key consisting of State, ZipCode, AreaCode, and City.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MultiCounty__c</fullName>
        <label>MultiCounty</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NAICS_Codes__c</fullName>
        <label>NAICS Codes</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PreferredLastLineKey__c</fullName>
        <label>PreferredLastLineKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryRecord__c</fullName>
        <label>PrimaryRecord</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StateANSI__c</fullName>
        <label>StateANSI</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateFIPS__c</fullName>
        <label>StateFIPS</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>Time Zone</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueZIPName__c</fullName>
        <label>UniqueZIPName</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Key__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>ZipCode__c</columns>
        <columns>AreaCode__c</columns>
        <columns>Country__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>